<resources>
    <string name="app_name">TWIG</string>
    <string name="EmailAdd">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="FullName">Full Name</string>
    <string name="Spinner">Select your account roll?</string>

    <string name="SignUp">Sign Up</string>

    <string name="Fgtpswd">Forget your password?</string>
    <string name="Login">Sign In</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Submit">Submit</string>

    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select">Please select your interesting</string>
    <string name="Innovation">Innovation</string>
    <string name="Conservation">Conservation</string>
    <string name="SocialImpact">Social Impact</string>
    <string name="Environmentalimpact">Environmental Impact</string>
    <string name="Cities">Cities</string>
    <string name="Biodiversity">Biodiversity</string>
    <string name="Wildlife">Wildlife / animals</string>
    <string name="SustainableCities">Sustainable Cities</string>
    <string name="Urbanisation">Urbanisation</string>
    <string name="FutureDesign">Future Design</string>
    <string name="Industry">Industry</string>
    <string name="Infrastructure">Infrastructure</string>
    <string name="EconomicGrowth">Economic Growth</string>
    <string name="Technology">Technology</string>
    <string name="Consumption">Consumption</string>
    <string name="Entrepreneurship">Entrepreneurship</string>
    <string name="Leadership">Leadership</string>
    <string name="Financialwellbeing">Financial wellbeing</string>
    <string name="EntrepreneurialMindset">Entrepreneurial Mindset</string>
    <string name="SelfDevelopment">Self-Development</string>
    <string name="title_activity_sent_email">SentEmailActivity</string>
    <string name="title_activity_preference_acitivity">PreferenceAcitivity</string>
    <string name="explore">Explore</string>
    <string name="title_explore">Explore</string>
    <string name="title_add_new">Add New</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="addnew">Add New</string>
    <string name="twig">twig</string>
    <string name="newpost">New Post</string>
    <string name="newevent">New Event</string>
    <string name="newoppo">New Opportunity</string>
    <string name="createevent">create event</string>
    <string name="createpost">create post</string>
    <string name="cancel">cancel</string>
    <string name="post">post</string>
    <string name="addlocation">add location</string>
    <string name="writesomething">write something...</string>
    <string name="addcategory">add category</string>
    <string name="tagsomeone">tag someone</string>
    <string name="addtimedate">add time &amp; date</string>
    <string name="addcoorg">add co-organiser</string>
    <string name="sharepublic">share it with public</string>
    <string name="signupticket">sign up or ticket</string>
    <string name="createoppo">create opportunity</string>
    <string name="selectcategory">Please select category for your post: </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_education">My Education</string>
    <string name="profile">Profile</string>
    <string name="my_experience">My Experience</string>
    <string name="my_post">My Post</string>
    <string name="camera">camera</string>
    <string name="choosefromalbum">choose from album</string>
    <string name="pleaseenteralocation">Please enter a location</string>
    <string name="see_all">See All</string>
    <string name="setatitleforevent">Set A Title For Event</string>
    <string name="tc1">by signing up I agree to the  </string>
    <string name="tc2">terms &amp; policy</string>
    <string name="editpost">Edit post</string>
    <string-array name="spinnerItems">
        <item>Student</item>
        <item>Mentor</item>
        <item>Admin</item>
    </string-array>
</resources>
