<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_home_selector"
        android:enabled="true"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />/>

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/navigation_explore_selector"
        android:enabled="true"
        android:title="@string/title_explore"
        app:showAsAction="ifRoom" />/>

    <item
        android:id="@+id/navigation_addnew"
        android:icon="@drawable/navigation_addnew_selector"
        android:enabled="true"
        android:title="@string/title_add_new"
        app:showAsAction="ifRoom" />/>

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/navigationchats_selector"
        android:enabled="true"
        android:title="@string/title_chats"
        app:showAsAction="ifRoom" />/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/navigation_profile_selector"
        android:enabled="true"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />/>

</menu>
