<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Activity_CreateEvent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F0F0F0"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2B2A2A"
                android:textSize="20sp"
                android:fontFamily="@font/open_sans_semibold"
                android:layout_gravity="center_horizontal"
                android:text="@string/createevent"/>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2B2A2A"
                android:textSize="20sp"
                android:fontFamily="@font/open_sans_light"
                android:layout_gravity="start"
                android:textStyle="italic"
                android:text="@string/cancel"/>

            <TextView
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4A9EEF"
                android:textSize="20sp"
                android:fontFamily="@font/open_sans_semibold"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:text="@string/post"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/app_bar">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/feed_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/feed_userphoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:maxWidth="60dp"
            android:maxHeight="60dp" />

        <TextView
            android:id="@+id/feed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignTop="@id/feed_userphoto"
            android:layout_toRightOf="@id/feed_userphoto"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_weight="600"
            android:text="Jess J"
            android:textSize="17dp"
            android:textColor="#393939"/>

        <TextView
            android:id="@+id/feed_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feed_name"
            android:layout_alignLeft="@id/feed_name"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/addlocation"
            android:textColor="#4A9EEF"
            android:textSize="15dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/createpostcontent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/feed_head"
        android:textStyle="italic"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="top"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/writesomething" />

    <ImageButton
        android:id="@+id/addimage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/createpostcontent"
        android:layout_alignLeft="@id/createpostcontent"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/addimage" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/addimage"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/addtimedate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/line1"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_vertical"
                android:text="@string/addtimedate"
                android:textColor="#2B2A2A"
                android:textSize="8pt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/graterthan" />
        </RelativeLayout>

        <View
            android:id="@+id/line5"
            android:layout_below="@id/addtimedate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/addcoorg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/line5"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/addcoorg"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:textColor="#2B2A2A"
                android:textSize="8pt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/graterthan" />
        </RelativeLayout>

        <View
            android:id="@+id/line4"
            android:layout_below="@id/addcoorg"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/addcategory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/line4"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/addcategory"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:textColor="#2B2A2A"
                android:textSize="8pt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/graterthan" />
        </RelativeLayout>

        <View
            android:id="@+id/line2"
            android:layout_below="@id/addcategory"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/sharepublic"
            android:layout_below="@id/line2"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/sharepublic"
                android:fontFamily="@font/open_sans"
                android:textColor="#2B2A2A"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:textSize="8pt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/graterthan" />
        </RelativeLayout>

        <View
            android:id="@+id/line3"
            android:layout_below="@+id/sharepublic"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/signupticket"
            android:layout_below="@id/line3"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/signupticket"
                android:fontFamily="@font/open_sans"
                android:textColor="#2B2A2A"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:textSize="8pt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/graterthan" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addlocation"
            android:layout_below="@id/line6"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/addlocation"
                android:fontFamily="@font/open_sans"
                android:textColor="#2B2A2A"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:textSize="8pt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/graterthan" />
        </RelativeLayout>

        <View
            android:id="@+id/line6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/signupticket"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/addlocation"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>